--- a/templates/realizar_venta.html
+++ b/templates/realizar_venta.html
@@ -5,9 +5,7 @@
     <title>Realizar Venta</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles_realizar_venta.css') }}">
     <script src="{{ url_for('static', filename='js/confirm_venta.js') }}"></script>   
-    <script src="{{ url_for('static', filename='js/nuevo_precio.js') }}"></script>   
-
-
+    <script src="{{ url_for('static', filename='js/precio_abono.js') }}"></script>   
 </head>
 <body>
     <div class="container">
@@ -47,16 +45,22 @@
                 <input type="number" name="cantidad" id="cantidad" min="1" max="{{ producto.existencias }}" required>
 
                 <label for="pago">Método de Pago:</label>
-                <select name="pago" id="pago" onchange="toggleNuevoPrecio()" required>
+                <select name="pago" id="pago" onchange="toggleFields()" required>
                     <option value="" disabled selected></option>
                     <option value="Abonos">Abonos</option>
                     <option value="De contado">De contado</option>
                 </select>
                 
-               <!-- Campo para ingresar el nuevo precio si el método de pago es 'Abonos' -->
+                <!-- Campo para ingresar el primer abono -->
+                <div id="abono_field" style="display:none;">
+                    <label for="primer_abono">Primer Abono:</label>
+                    <input type="number" step="0.01" name="primer_abono" id="primer_abono" placeholder="Ingresa el primer abono" required>
+                </div>
+
+                <!-- Campo para ingresar el nuevo precio si el método de pago es 'Abonos' -->
                 <div id="nuevo_precio_field" style="display:none;">
-                 <label for="nuevo_precio">Nuevo precio (solo para Abonos):</label>
-                 <input type="number" step="0.01" name="nuevo_precio" id="nuevo_precio" placeholder="Ingresa el nuevo precio">
+                    <label for="nuevo_precio">Nuevo precio (solo para Abonos):</label>
+                    <input type="number" step="0.01" name="nuevo_precio" id="nuevo_precio" placeholder="Ingresa el nuevo precio">
                 </div>
 
                 <button type="submit">Confirmar Venta</button>
